docs-archive/apache-airflow-providers-tableau/5.2.0/_sources/_api/airflow/providers/tableau/sensors/tableau/index.rst.txt
airflow.providers.tableau.sensors.tableau
=========================================

.. py:module:: airflow.providers.tableau.sensors.tableau


Classes
-------

.. autoapisummary::

   airflow.providers.tableau.sensors.tableau.TableauJobStatusSensor


Module Contents
---------------

.. py:class:: TableauJobStatusSensor(*, job_id, site_id = None, tableau_conn_id = 'tableau_default', **kwargs)

   Bases: :py:obj:`airflow.providers.tableau.version_compat.BaseSensorOperator`


   Watches the status of a Tableau Server Job.

   .. seealso:: https://tableau.github.io/server-client-python/docs/api-ref#jobs

   :param job_id: Id of the job to watch.
   :param site_id: The id of the site where the workbook belongs to.
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('job_id',)



   .. py:attribute:: tableau_conn_id
      :value: 'tableau_default'



   .. py:attribute:: job_id


   .. py:attribute:: site_id
      :value: None



   .. py:method:: poke(context)

      Pokes until the job has successfully finished.

      :param context: The task context during execution.
      :return: True if it succeeded and False if not.



