docs-archive/apache-airflow-providers-tableau/5.6.0/_sources/_api/airflow/providers/tableau/sensors/tableau/index.rst.txt
airflow.providers.tableau.sensors.tableau
=========================================

.. py:module:: airflow.providers.tableau.sensors.tableau


Classes
-------

.. autoapisummary::

   airflow.providers.tableau.sensors.tableau.TableauJobStatusSensor


Module Contents
---------------

.. py:class:: TableauJobStatusSensor(*, job_id, site_id = None, tableau_conn_id = 'tableau_default', max_status_retries = 0, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Watches the status of a Tableau Server Job.

   .. seealso:: https://tableau.github.io/server-client-python/docs/api-ref#jobs

   :param job_id: Id of the job to watch.
   :param site_id: The id of the site where the workbook belongs to.
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.
   :param max_status_retries: How often to rerun get_job_status in case
       of an error or cancellation, to account for transient errors.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('job_id',)



   .. py:attribute:: tableau_conn_id
      :value: 'tableau_default'



   .. py:attribute:: job_id


   .. py:attribute:: site_id
      :value: None



   .. py:attribute:: max_status_retries
      :value: 0



   .. py:method:: poke(context)

      Pokes until the job has successfully finished.

      When max_status_retries is set, the Sensor will retry
      in case of a TableauJobFinishCode.ERROR, TableauJobFinishCode.CANCELED before raising an Error.

      :param context: The task context during execution.
      :return: True if it succeeded and False if not.



